--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -17,8 +17,20 @@
                     <view key="view" contentMode="scaleToFill" id="vQH-57-Qgt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Blogger" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bgk-H1-9Hk">
+                                <rect key="frame" x="85.5" y="314.5" width="204" height="38"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="29"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" name="selectedControlColor" catalog="System" colorSpace="catalog"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="Bgk-H1-9Hk" firstAttribute="centerX" secondItem="vQH-57-Qgt" secondAttribute="centerX" id="aGO-n7-nOw"/>
+                            <constraint firstItem="Bgk-H1-9Hk" firstAttribute="centerY" secondItem="vQH-57-Qgt" secondAttribute="centerY" id="gQd-RO-CUp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="GG2-26-qSk"/>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="dWv-gg-Dj5" appends="YES" id="bvm-WA-RaT"/>
