--- a/FellowBloggerV2/Views/ProfileHeader.xib
+++ b/FellowBloggerV2/Views/ProfileHeader.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="FellowBloggerV2" customModuleProvider="target">
             <connections>
-                <outlet property="bioText" destination="Ibu-rX-gc3" id="iZe-b5-KRc"/>
+                <outlet property="bioText" destination="Ibu-rX-gc3" id="Zof-KE-Khy"/>
                 <outlet property="bloggerName" destination="77g-3Z-mSQ" id="xd9-vP-bYo"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="kKb-Q4-0Aa"/>
                 <outlet property="coverImage" destination="zIY-Ik-30B" id="UyG-ni-EHq"/>
@@ -24,28 +24,28 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="396" height="481"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="553"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tealCover" translatesAutoresizingMaskIntoConstraints="NO" id="zIY-Ik-30B" customClass="CurvedUIImageView" customModule="FellowBloggerV2" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="20" width="396" height="200"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="tealCover" translatesAutoresizingMaskIntoConstraints="NO" id="zIY-Ik-30B">
+                    <rect key="frame" x="0.0" y="20" width="396" height="211"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="200" id="jzY-pI-TfU"/>
+                        <constraint firstAttribute="width" secondItem="zIY-Ik-30B" secondAttribute="height" multiplier="16:9" id="tMW-s5-tHC"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePH" translatesAutoresizingMaskIntoConstraints="NO" id="9Cp-ID-IFB" customClass="CircularImageView" customModule="FellowBloggerV2" customModuleProvider="target">
-                    <rect key="frame" x="29" y="167.5" width="100" height="100"/>
+                    <rect key="frame" x="8" y="191" width="80" height="80"/>
                     <color key="backgroundColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="6pa-Su-AaT"/>
-                        <constraint firstAttribute="width" secondItem="9Cp-ID-IFB" secondAttribute="height" multiplier="1:1" id="e0e-EW-1k4"/>
+                        <constraint firstAttribute="width" constant="80" id="SuI-b5-nD5"/>
+                        <constraint firstAttribute="height" constant="80" id="j3n-Z2-CBx"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="231-oK-UXa">
-                    <rect key="frame" x="321" y="220" width="75" height="75"/>
+                    <rect key="frame" x="300" y="231" width="75" height="75"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="231-oK-UXa" secondAttribute="height" multiplier="1:1" id="TDb-Ia-iTy"/>
-                        <constraint firstAttribute="height" constant="75" id="tmN-0A-KIx"/>
+                        <constraint firstAttribute="height" constant="75" id="5qv-ca-aj1"/>
+                        <constraint firstAttribute="width" constant="75" id="jbe-QZ-td4"/>
                     </constraints>
                     <state key="normal" image="signOut"/>
                     <connections>
@@ -53,66 +53,110 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6f-dV-uDC">
-                    <rect key="frame" x="246" y="220" width="75" height="75"/>
+                    <rect key="frame" x="217" y="231" width="75" height="75"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="75" id="AAb-ZP-lxO"/>
+                        <constraint firstAttribute="width" constant="75" id="ALG-l1-zLu"/>
+                    </constraints>
                     <state key="normal" image="edit"/>
                     <connections>
                         <action selector="editPressed:" destination="-1" eventType="touchUpInside" id="4Hb-J0-eQ9"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77g-3Z-mSQ">
-                    <rect key="frame" x="20" y="332" width="326" height="21"/>
+                    <rect key="frame" x="8" y="279" width="317" height="21"/>
                     <fontDescription key="fontDescription" name="Farah" family="Farah" pointSize="21"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="BIO!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ibu-rX-gc3">
-                    <rect key="frame" x="8" y="361" width="380" height="100"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="BIO!" translatesAutoresizingMaskIntoConstraints="NO" id="Ibu-rX-gc3">
+                    <rect key="frame" x="0.0" y="337" width="375" height="80"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="2RP-eu-mnt"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="6Ar-3m-2SS"/>
+                        <constraint firstAttribute="height" constant="80" id="CBR-E7-2ak"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
                 </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name  Last name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7U-0A-Fio">
-                    <rect key="frame" x="20" y="303" width="356" height="21"/>
+                    <rect key="frame" x="8" y="308" width="359" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YN5-RW-FGK">
+                    <rect key="frame" x="307" y="425" width="60" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="YN5-RW-FGK" secondAttribute="height" multiplier="1:1" id="FUg-3l-29d"/>
+                        <constraint firstAttribute="height" constant="60" id="wOS-OQ-0O6"/>
+                    </constraints>
+                    <state key="normal" image="githubLogo"/>
+                    <connections>
+                        <action selector="github:" destination="-1" eventType="touchUpInside" id="XiY-cs-epU"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajR-HY-RpH">
+                    <rect key="frame" x="8" y="425" width="60" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="qwd-iG-vpY"/>
+                        <constraint firstAttribute="width" secondItem="ajR-HY-RpH" secondAttribute="height" multiplier="1:1" id="sRY-8x-tfX"/>
+                    </constraints>
+                    <state key="normal" image="linkedinLogo"/>
+                    <connections>
+                        <action selector="linkedInPressed:" destination="-1" eventType="touchUpInside" id="827-2K-Dp9"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2zK-1V-ATa">
+                    <rect key="frame" x="157.5" y="425" width="60" height="60"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="2zK-1V-ATa" secondAttribute="height" multiplier="1:1" id="2UK-Mz-thk"/>
+                        <constraint firstAttribute="height" constant="60" id="Lax-xy-xAs"/>
+                    </constraints>
+                    <state key="normal" image="email"/>
+                    <connections>
+                        <action selector="emailPressed:" destination="-1" eventType="touchUpInside" id="UrH-75-wdU"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="centerY" secondItem="231-oK-UXa" secondAttribute="centerY" id="4tm-Wg-MeF"/>
-                <constraint firstItem="231-oK-UXa" firstAttribute="top" secondItem="zIY-Ik-30B" secondAttribute="bottom" id="A6b-8g-aAS"/>
-                <constraint firstItem="zIY-Ik-30B" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="AAf-Gg-F4V"/>
-                <constraint firstItem="n7U-0A-Fio" firstAttribute="top" secondItem="231-oK-UXa" secondAttribute="bottom" constant="8" id="Akx-Kg-L7c"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="77g-3Z-mSQ" secondAttribute="trailing" constant="50" id="BbH-Gk-yWe"/>
-                <constraint firstItem="Ibu-rX-gc3" firstAttribute="top" secondItem="77g-3Z-mSQ" secondAttribute="bottom" constant="8" id="Dnv-j8-pRe"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="n7U-0A-Fio" secondAttribute="trailing" constant="20" id="MHm-1G-fXe"/>
-                <constraint firstItem="77g-3Z-mSQ" firstAttribute="top" secondItem="n7U-0A-Fio" secondAttribute="bottom" constant="8" id="MKb-ho-gc4"/>
-                <constraint firstItem="9Cp-ID-IFB" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" multiplier="0.4" id="MQH-45-cpm"/>
-                <constraint firstItem="77g-3Z-mSQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="NAl-eO-32C"/>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="width" secondItem="231-oK-UXa" secondAttribute="width" id="OLz-PI-BU4"/>
-                <constraint firstItem="Ibu-rX-gc3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="QEu-pF-RkC"/>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="height" secondItem="231-oK-UXa" secondAttribute="height" id="Umn-GR-Thp"/>
-                <constraint firstItem="zIY-Ik-30B" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="YNf-Cm-pTl"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ibu-rX-gc3" secondAttribute="trailing" constant="8" id="Zrm-gC-tdm"/>
-                <constraint firstItem="zIY-Ik-30B" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="doh-pw-KsD"/>
-                <constraint firstItem="9Cp-ID-IFB" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="0.9" constant="-8" id="jAK-oq-YFT"/>
-                <constraint firstItem="231-oK-UXa" firstAttribute="leading" secondItem="U6f-dV-uDC" secondAttribute="trailing" id="qtG-oN-6E1"/>
-                <constraint firstItem="n7U-0A-Fio" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="whZ-2A-u69"/>
-                <constraint firstItem="231-oK-UXa" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="ytt-Oc-YSK"/>
+                <constraint firstItem="9Cp-ID-IFB" firstAttribute="top" secondItem="zIY-Ik-30B" secondAttribute="bottom" constant="-40" id="6Cy-J0-9yo"/>
+                <constraint firstItem="ajR-HY-RpH" firstAttribute="top" secondItem="Ibu-rX-gc3" secondAttribute="bottom" constant="8" id="7JS-xa-6qj"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="YN5-RW-FGK" secondAttribute="trailing" constant="8" id="9Ef-9C-pbv"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="n7U-0A-Fio" secondAttribute="trailing" constant="8" id="9tf-oR-3Up"/>
+                <constraint firstItem="Ibu-rX-gc3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="P7u-XH-RTj"/>
+                <constraint firstItem="n7U-0A-Fio" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="aRV-No-XxD"/>
+                <constraint firstItem="YN5-RW-FGK" firstAttribute="top" secondItem="Ibu-rX-gc3" secondAttribute="bottom" constant="8" id="cNg-En-zsS"/>
+                <constraint firstItem="Ibu-rX-gc3" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="caZ-rp-Eom"/>
+                <constraint firstItem="ajR-HY-RpH" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="fFH-dc-eqz"/>
+                <constraint firstItem="231-oK-UXa" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="gyz-F4-Jvc"/>
+                <constraint firstItem="231-oK-UXa" firstAttribute="top" secondItem="zIY-Ik-30B" secondAttribute="bottom" id="h7Q-Op-JgY"/>
+                <constraint firstItem="2zK-1V-ATa" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="hH6-ty-MaL"/>
+                <constraint firstItem="77g-3Z-mSQ" firstAttribute="top" secondItem="9Cp-ID-IFB" secondAttribute="bottom" constant="8" id="hMR-5s-Anr"/>
+                <constraint firstItem="zIY-Ik-30B" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="iGH-Rr-OCv"/>
+                <constraint firstItem="U6f-dV-uDC" firstAttribute="top" secondItem="zIY-Ik-30B" secondAttribute="bottom" id="jrN-PM-khD"/>
+                <constraint firstItem="2zK-1V-ATa" firstAttribute="top" secondItem="Ibu-rX-gc3" secondAttribute="bottom" constant="8" id="kpB-Bh-N2S"/>
+                <constraint firstItem="9Cp-ID-IFB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="o3I-s0-0Oz"/>
+                <constraint firstItem="zIY-Ik-30B" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ock-RS-rFe"/>
+                <constraint firstItem="77g-3Z-mSQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="ooT-w7-oYG"/>
+                <constraint firstItem="Ibu-rX-gc3" firstAttribute="top" secondItem="n7U-0A-Fio" secondAttribute="bottom" constant="8" id="q3M-gf-8NY"/>
+                <constraint firstItem="n7U-0A-Fio" firstAttribute="top" secondItem="77g-3Z-mSQ" secondAttribute="bottom" constant="8" id="q67-5A-xfu"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="77g-3Z-mSQ" secondAttribute="trailing" constant="50" id="tzl-CZ-NKB"/>
+                <constraint firstItem="231-oK-UXa" firstAttribute="leading" secondItem="U6f-dV-uDC" secondAttribute="trailing" constant="8" id="vgF-ex-l5n"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="155.19999999999999" y="51.724137931034484"/>
+            <point key="canvasLocation" x="168.80000000000001" y="107.49625187406298"/>
         </view>
     </objects>
     <resources>
         <image name="ProfilePH" width="256" height="256"/>
         <image name="edit" width="25" height="25"/>
+        <image name="email" width="401" height="400"/>
+        <image name="githubLogo" width="225" height="225"/>
+        <image name="linkedinLogo" width="640" height="640"/>
         <image name="signOut" width="25" height="25"/>
         <image name="tealCover" width="1280" height="720"/>
     </resources>
