--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -236,21 +236,65 @@
             </objects>
             <point key="canvasLocation" x="2592.8000000000002" y="83.208395802098963"/>
         </scene>
-        <!--Comments View Controller-->
-        <scene sceneID="YuM-8I-Vxe">
+        <!--Comments Table View Controller-->
+        <scene sceneID="ngO-Dv-HE4">
             <objects>
-                <viewController storyboardIdentifier="commentVC" id="XWW-2e-fwa" customClass="CommentsViewController" customModule="FellowBloggerV2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="9VO-W3-mSz">
+                <tableViewController storyboardIdentifier="commentVC" id="jnF-Bc-Fe3" customClass="CommentsTableViewController" customModule="FellowBloggerV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ndo-jp-j5r">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <viewLayoutGuide key="safeArea" id="sWB-Gv-7aC"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="rFY-ri-zwh"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Tg4-eL-BAz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" red="0.28333655330000002" green="0.4279294481" blue="0.4480184968" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <sections>
+                            <tableViewSection id="O5u-W4-TLu">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="ZHL-aE-ZNb">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZHL-aE-ZNb" id="R77-hQ-A9S">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePH" translatesAutoresizingMaskIntoConstraints="NO" id="UoD-va-Crl" customClass="CircularImageView" customModule="FellowBloggerV2" customModuleProvider="target">
+                                                    <rect key="frame" x="8" y="8" width="33.5" height="33.5"/>
+                                                    <color key="backgroundColor" red="0.28333655330000002" green="0.4279294481" blue="0.4480184968" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="UoD-va-Crl" secondAttribute="height" multiplier="1:1" id="gty-5G-3tA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRp-o8-LKu">
+                                                    <rect key="frame" x="61.5" y="14.5" width="277.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="UoD-va-Crl" firstAttribute="top" secondItem="R77-hQ-A9S" secondAttribute="top" constant="8" id="E3D-l0-bJf"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XRp-o8-LKu" secondAttribute="trailing" constant="20" id="KBA-SK-oZU"/>
+                                                <constraint firstAttribute="bottom" secondItem="UoD-va-Crl" secondAttribute="bottom" constant="8" id="fi1-nG-CQN"/>
+                                                <constraint firstItem="XRp-o8-LKu" firstAttribute="leading" secondItem="UoD-va-Crl" secondAttribute="trailing" constant="20" id="jn4-Op-8D8"/>
+                                                <constraint firstItem="XRp-o8-LKu" firstAttribute="centerY" secondItem="UoD-va-Crl" secondAttribute="centerY" id="tQt-LK-Gcw"/>
+                                                <constraint firstItem="UoD-va-Crl" firstAttribute="leading" secondItem="R77-hQ-A9S" secondAttribute="leading" constant="8" id="vAG-zT-288"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="jnF-Bc-Fe3" id="dhK-Xj-iBP"/>
+                            <outlet property="delegate" destination="jnF-Bc-Fe3" id="f0X-CT-Pdk"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="MqE-mI-FOQ"/>
+                    <connections>
+                        <outlet property="bloggerComment" destination="XRp-o8-LKu" id="Ouv-bA-VHH"/>
+                        <outlet property="bloggerImage" destination="UoD-va-Crl" id="Kft-Bh-oUH"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2b9-Ip-QK8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4412" y="75.112443778110944"/>
+            <point key="canvasLocation" x="4357.6000000000004" y="74.212893553223395"/>
         </scene>
         <!--Fellow Feed-->
         <scene sceneID="2fF-S7-P7G">
@@ -499,7 +543,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="editBioTextView" destination="Wfm-EZ-PhO" id="ONj-xI-DAt"/>
-                        <segue destination="t8c-xh-J5e" kind="unwind" identifier="unwind from edit bio vc" unwindAction="unwindFromEditBioVontrollerWithSegue:" id="5o7-bm-WEe"/>
+                        <segue destination="t8c-xh-J5e" kind="unwind" identifier="unwind from edit bio vc" unwindAction="unwindFromEditViewControllerWithSegue:" id="5o7-bm-WEe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4u8-YQ-N6V" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -703,6 +747,9 @@
                                                 <constraint firstItem="bz5-er-Tw0" firstAttribute="leading" secondItem="cmz-6Q-6aH" secondAttribute="trailing" constant="67.5" id="p6k-Dc-ccE"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Di7-hD-Ane" kind="show" id="3M2-TR-jNa"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -863,7 +910,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="XWW-2e-fwa" kind="relationship" relationship="rootViewController" id="Vwi-4D-30D"/>
+                        <segue destination="jnF-Bc-Fe3" kind="relationship" relationship="rootViewController" id="T82-jZ-TYf"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dyt-Hs-1t2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -902,5 +949,8 @@
         <image name="settings" width="25" height="25"/>
         <image name="tealCover" width="1280" height="720"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="3M2-TR-jNa"/>
+    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
